--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,9 @@
 /* font */
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Slab:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+:root {
+    --primary-color:#ffffff
+    --secondary-color:linear-gradient(90deg, rgba(65,5,69,1) 18%, rgba(0,0,0,1) 94%);
+    --bg:#070F2B
+}   
 
-
+/* styles */
