--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,162 @@
 /* font */
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Slab:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 :root {
-    --primary-color:#ffffff
-    --secondary-color:linear-gradient(90deg, rgba(65,5,69,1) 18%, rgba(0,0,0,1) 94%);
-    --bg:#070F2B
+    --primary-color:#ffffff;
+    --sc-color:#ff14e7;
+    --bg:#3ec8fe;
 }   
 
 /* styles */
+body {
+    background-image: url(../img/bg.png);
+}
+
+/* header */
+header {
+    margin: 1rem 5%;
+    display: flex;
+    align-items: center;
+}
+header .tittle{
+    flex: 1 1 ;
+    font-size: 1.5rem;
+    font-family: 'Ubuntu';
+    font-weight: bolder;
+}
+header .tittle span {
+    color: #662d91;
+}
+header .tittle h1 {
+    color: var(--primary-color);
+}
+/* navigation */
+header .nav {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(85px, 1fr));
+    gap: .5rem;
+    place-content: center, center;
+    flex: 1;
+}
+header .nav a {
+    text-decoration: none;
+    font-size: 1rem;
+    font-family: 'Roboto Slab';
+    color: var(--primary-color);
+    text-align: center;
+}
+header .nav a::after {
+    content: '';
+    display: block;
+    border-bottom: 4px solid #cf10cf;
+    padding-bottom: 2px;
+    transition: .3s;
+    transform: scale(0);
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+}
+header .nav a:hover::after {
+    transform: scale(.5);
+    -webkit-transform: scale(.5);
+    -moz-transform: scale(.5);
+    -ms-transform: scale(.5);
+    -o-transform: scale(.5);
+}
+
+/* content */
+.content {
+    display: flex;
+    margin: 1rem 5%;
+}
+.content .content-text {
+    flex: 3;
+    margin-top: 5rem;
+}
+.content-text h1 {
+    font-family: 'Nunito Sans';
+    font-size: 3rem;
+    color: var(--primary-color);
+    font-weight: bolder;
+    width: 80%;
+    line-height: 3.1rem;
+}
+.content-text p {
+    margin-top: .7rem;
+    font-family: 'Roboto Slab';
+    font-size: 1rem;
+    color: var(--sc-color);
+    font-weight: 400;
+    width: 80%;
+    line-height: 1.3rem;
+}
+.content-text .content-text-btn {
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
+    align-items: center;
+}
+.content-text-btn a {
+    padding: .5rem 1.6rem;
+    background-color: var(--bg);
+    color: var(--primary-color);
+    font-size: 1.2rem;
+    font-family: 'Roboto Slab';
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.content-text-btn a:active {
+    box-shadow: 0 0 4px;
+}
+.content-text-btn h2 {
+    width: 50%;
+    color: var(--primary-color);
+    font-family: 'Nunito Sans';
+}
+/* hero */
+.content .content-hero {
+    flex: 1;
+}
+.content .content-hero img {
+    width: 600px;
+    margin-top: 5rem;
+}
+
+
+/* responsive */
+/* handphone */
+@media screen and (max-width:500px){
+    html {
+        font-size: 80%;
+    }
+    /* nav */
+    header  .tittle{
+        flex: 3 1;
+    }
+    header .nav a:hover::after {
+        transform: scale(.8);
+        -webkit-transform: scale(.8);
+        -moz-transform: scale(.8);
+        -ms-transform: scale(.8);
+        -o-transform: scale(.8);
+}
+}
+
+/* tablet */
+@media screen and (min-width:768px){
+    
+}
+
+/* desktop */
+@media screen and (min-width:1024px){
+    
+}
