--- a/css/styles.css
+++ b/css/styles.css
@@ -124,17 +124,19 @@ header .nav a:hover::after {
 }
 /* hero */
 .content .content-hero {
-    flex: 1;
+   flex: 1;
+   border: 1px solid;
+   align-items: center;
+    margin-top: 5rem;
 }
 .content .content-hero img {
     width: 600px;
-    margin-top: 5rem;
 }
 
 
 /* responsive */
 /* handphone */
-@media screen and (max-width:500px){
+@media screen and (max-width:768px){
     html {
         font-size: 80%;
     }
@@ -148,15 +150,32 @@ header .nav a:hover::after {
         -moz-transform: scale(.8);
         -ms-transform: scale(.8);
         -o-transform: scale(.8);
-}
+    }
+    .content {
+        flex-wrap: wrap;
+    }
+    .content .content-hero img {
+        width: 450px;
+    }
 }
 
 /* tablet */
 @media screen and (min-width:768px){
-    
+    .content {
+        flex-wrap: wrap;
+    }
+    .content .content-hero img {
+        min-width: 10%;
+        margin-left: -75px;
+    }
 }
 
 /* desktop */
 @media screen and (min-width:1024px){
-    
+    .content {
+        flex-wrap: wrap;
+    }
+    .content .content-hero img {
+        min-width: 10%;
+    }
 }
