--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ header {
     align-items: center;
 }
 header .tittle{
-    flex: 1 1 ;
+    flex: 2 1 ;
     font-size: 1.5rem;
     font-family: 'Ubuntu';
     font-weight: bolder;
@@ -141,9 +141,11 @@ header .nav a:hover::after {
         font-size: 80%;
     }
     /* nav */
-    header  .tittle{
-        flex: 3 1;
+    header  .nav{
+        flex: 1 1;
+        gap: 1px;
     }
+    header .nav 
     header .nav a:hover::after {
         transform: scale(.8);
         -webkit-transform: scale(.8);
@@ -165,8 +167,7 @@ header .nav a:hover::after {
         flex-wrap: wrap;
     }
     .content .content-hero img {
-        min-width: 10%;
-        margin-left: -75px;
+        width: 710px;
     }
 }
 
@@ -176,6 +177,6 @@ header .nav a:hover::after {
         flex-wrap: wrap;
     }
     .content .content-hero img {
-        min-width: 10%;
+        width: 450px;
     }
 }
