--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ header .nav {
 }
 header .nav a {
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-family: 'Roboto Slab';
     color: var(--primary-color);
     text-align: center;
@@ -139,7 +139,11 @@ header .nav a:hover::after {
     /* nav */
     header  .nav{
         flex: 1 1;
-        gap: 1.5rem;
+        gap: 1rem;
+        margin-top: 5px;
+    }
+    header .nav a {
+        font-size: .8rem;
     }
     header .nav a:hover::after {
         transform: scale(.8);
