--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,8 @@
 
 /* styles */
 body {
-    background-image: url(../img/bg.png);
+    background: rgb(2,0,36);
+    background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(2,13,60,1) 33%, rgba(73,23,23,1) 51%, rgba(2,23,27,1) 89%);
 }
 
 /* header */
@@ -129,7 +130,96 @@ header .nav a:hover::after {
     width: 600px;
 }
 
+/* card */
+main {
+    margin: 10rem 5% 2rem ;
+}
+main .header h1{
+    color: #3700ff;
+    font-size: 1.5rem;
+    font-family: 'Ubuntu';
+    font-weight: 600;
+    letter-spacing: 2px;
+    margin-bottom: 2px;
+}
+main .header h2 {
+   color: var(--primary-color);
+   font-size: 3rem;
+   font-family: 'Nunito Sans';
+   font-weight: 700;
+}
+main .header p {
+    color: #c509c5;
+    font-family: 'Roboto Slab';
+    font-size: 1.2rem;
+    width: 45%;
+    margin-top: 2px;
+    font-weight: 350;
+}
 
+/* card */
+main .card {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(300px, 1fr));
+    gap: 5px;
+    margin-top: 10px;
+}
+main .card-all {
+    background-color: #1d1b36;
+    padding: 20px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+/* emoji */
+main .card-all h1{
+    display: block;
+    text-align: center;
+    width: 35px;
+    font-size: 2rem;
+    padding: 1rem;
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+}
+main .card-1 h1 {
+    background-color: #713d1b;
+}
+main .card-2 h1 {
+    background-color: #211c60;
+}
+main .card-3 h1 {
+    background-color: #246442;
+}
+main .card-4 h1 {
+    background-color: #2d2975;
+}
+main .card-5 h1 {
+    background-color: #64690d;
+}
+main .card-6 h1 {
+    background-color: #681a5d;
+}
+
+main .card-all h2 {
+    color: var(--primary-color);
+    font-size: 1.5rem;
+    font-family: 'Nunito Sans';
+    margin-top: 20px;
+    font-weight: 700;
+}
+main .card-all p {
+    font-family: 1rem;
+    font-family: 'Roboto Slab';
+    font-weight: 200;
+    margin-top: 5px;
+    color: var(--primary-color);
+    line-height: 1.3rem;
+}
 /* responsive */
 /* handphone */
 @media screen and (max-width:768px){
