--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,62 @@ main .card-all p {
     color: var(--primary-color);
     line-height: 1.3rem;
 }
+
+/* section-1 */
+.section-1 {
+    margin: 1rem 5%;
+    display: flex;
+    margin-top: 10rem;
+}
+.section-1 img {
+    width: 50%;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+/* section content */
+.section-1 .text {
+    padding: 1rem;
+}
+.section-1 .text h2 {
+    color: #3700ff;
+    font-size: 1.5rem;
+    font-family: 'Ubuntu';
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+.section-1 .text h1 {
+    color: var(--primary-color);
+    font-size: 2.5rem;
+    font-family: 'Nunito Sans';
+    font-weight: 700;
+    margin-bottom: 5px;
+    width: 80%;
+}
+.section-1 .text p {
+    color: #c509c5;
+    width: 80%;
+    font-size: 1.2rem;
+    font-family: 'Roboto Slab';
+    font-weight: 400;
+    line-height: 1.3;
+    margin-bottom: 10px;
+}
+
+.section-1 .text .text-check {
+    display: flex;
+    gap: 5px;
+    color: #246442;
+    margin-bottom: -6px;
+}
+.section-1 .text .text-check p {
+    color: var(--primary-color);
+    font-family: 'Roboto Slab';
+    font-weight: 100;
+}
+
 /* responsive */
 /* handphone */
 @media screen and (max-width:768px){
@@ -248,7 +304,8 @@ main .card-all p {
     .content-hero {
         margin-left: -50px;
     }
-    .content .content-hero img {
+    .content .conten
+    /t-hero img {
         width: 450px;
     }
 
