--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ header .nav a:hover::after {
    margin-top: 5rem;
 }
 .content .content-hero img {
-    width: 600px;
+    width: 500px;
 }
 
 /* card */
@@ -302,11 +302,7 @@ main .card-all p {
         flex-wrap: wrap;
     }
     .content-hero {
-        margin-left: -50px;
-    }
-    .content .conten
-    /t-hero img {
-        width: 450px;
+        margin-left: -32px;
     }
 
     /* card */
@@ -315,6 +311,15 @@ main .card-all p {
     }
     main .card {
         grid-template-columns: 100%;
+    }
+
+    /* section-1 */
+    .section-1 {
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+    .section-1 img {
+        width: 100%;
     }
 }
 
@@ -327,7 +332,7 @@ main .card-all p {
         flex-wrap: wrap;
     }
     .content .content-hero img {
-        width: 650px;
+        min-width: 50%;
     }
 }
 
