menambahkan section-2 dan responsive mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,12 @@ main .card-all p {
     font-weight: 100;
 }
 
+/* section-2 */
+#section-2 {
+    gap: 3.5rem;
+}
+
+
 /* responsive */
 /* handphone */
 @media screen and (max-width:768px){
