--- a/css/styles.css
+++ b/css/styles.css
@@ -285,15 +285,127 @@ main .card-all p {
 /* responsive */
 /* handphone */
 @media screen and (max-width:630px) {
-    
+    html {
+        font-size: 80%;
+    }
+    /* nav */
+    header  .nav{
+        flex: 1 1;
+        gap: 1rem;
+        margin-top: 5px;
+    }
+    header .nav a {
+        font-size: 1rem;
+    }
+    header .nav a:hover::after {
+        transform: scale(.8);
+        -webkit-transform: scale(.8);
+        -moz-transform: scale(.8);
+        -ms-transform: scale(.8);
+        -o-transform: scale(.8);
+    }
+
+    /* .content */
+    .content .content-text {
+        min-width: 200px;
+    }
+
+    .content {
+        flex-wrap: wrap;
+    }
+    .content .content-hero img {
+        width: 450px;
+    }
+    /* card */
+    main .header p {
+        width: 100%;
+    }
+    main .card {
+        grid-template-columns: 100%;
+    }
+    /* section-1 */
+    .section-1 {
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+    .section-1 img {
+        width: 100%;
+    }
+
+    /* section-2 */
+    #section-2 .text{
+        margin-top: -3rem;
+    }
 }
 
 @media screen and (min-width:631px) {
+    html {
+        font-size: 75%;
+    }
+    /* navbar */
+    header .nav {
+        gap: 1.3rem;
+    }
+    header .nav a {
+        font-size: 1rem;
+    }
+    /* content/content-hero */
+    .content .content-text {
+        min-width: 35rem;
+    }
+    .content .content-text h1 {
+       width: 70%;
+    }
+    .content .content-text p {
+        width: 70%;
+    }
+    .content {
+        flex-wrap: wrap;
+    }
     
+    .content .content-hero img {
+        width: 500px;
+    }
+
+    /* card */
+    main .header p{
+        width: 80%;
+    }
+
+    main .card {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .section-1 {
+        flex-wrap: wrap;
+    }
+    .section-1 img {
+        width: 100%;
+    }
 }
 
 @media screen and (min-width:992px) {
-    html {
-        font-size: 100%;
+   html {
+    font-size: 90%;
+   }
+   header .nav {
+    gap: 3rem;
+   }
+   .content .content-text h1 {
+    width: 100%;
+   }
+   .content .content-text p {
+    width: 100%;
+   }
+   main .card {
+    grid-template-columns: repeat(3, minmax(300px, 1fr));
+   }
+   main .header p {
+        width: 60%;
     }
+   .section-1 img {
+    width: 50%;
+   }
+   .section-1 {
+    flex-wrap: nowrap;
+   }
 }
