--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,6 @@ main .card-all p {
 .section {
     margin: 1rem 5%;
     display: flex;
-    margin-top: 10rem;
 }
 .section img {
     width: 50%;
@@ -276,9 +275,19 @@ main .card-all p {
     font-weight: 100;
 }
 
+/* section-1 */
+#section-1 {
+    margin-top: 10rem;
+}
 /* section-2 */
 #section-2 {
-    gap: 3.5rem;
+    margin-top: 7rem;
+    gap: 1rem;
+}
+
+/* section-3 */
+#section-3 {
+    margin-top: 5rem;
 }
 
 
@@ -327,11 +336,11 @@ main .card-all p {
         grid-template-columns: 100%;
     }
     /* section-1 */
-    .section-1 {
+    .section {
         flex-wrap: wrap;
         gap: 10px;
     }
-    .section-1 img {
+    .section img {
         width: 100%;
     }
 
@@ -378,10 +387,10 @@ main .card-all p {
     main .card {
         grid-template-columns: repeat(2, 1fr);
     }
-    .section-1 {
+    .section {
         flex-wrap: wrap;
     }
-    .section-1 img {
+    .section img {
         width: 100%;
     }
 }
@@ -405,10 +414,10 @@ main .card-all p {
    main .header p {
         width: 60%;
     }
-   .section-1 img {
+   .section img {
     width: 50%;
    }
-   .section-1 {
+   .section {
     flex-wrap: nowrap;
    }
 }
