--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ main .header p {
     font-family: 'Roboto Slab';
     font-size: 1.2rem;
     width: 45%;
-    margin-top: 2px;
+    margin-top: 3px;
     font-weight: 350;
 }
 
@@ -288,8 +288,142 @@ main .card-all p {
 /* section-3 */
 #section-3 {
     margin-top: 5rem;
+} 
+
+/* roadmap */
+article .container {
+    display: grid;
+    margin: 1rem 5%;
+    grid-template-columns: repeat(2,minmax(300px, 1fr));
+    grid-template-rows: repeat(5, 280px) ;
+    grid-template-areas:    
+     'hero section-2'    
+     'section-1 section-3'    
+     'section-1 section-4'   
+    'section-1 section-5'   
+    'section-1 section-6'                           ;
+    border-radius: 10px;
+    gap: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    -webkit-border-radius: 10px;
+}
+/* header */
+article .header {
+    margin: 8rem 5% 2rem;
+}
+article .header h2 {
+    color: #3700ff;
+    font-family: 'Ubuntu';
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+article .header h1 {
+    color: #ffffff;
+    font-family: 'Nunito Sans';
+    font-size: 2.4rem;
+    font-weight: 600;
+    width: 40%;
+    line-height: 2rem;
+    margin-top: 5px;
+}
+article .header p {
+    color: #cf10cf;
+    font-family: 'Roboto Slab';
+    width: 46%;
+    line-height: 1.2rem;
+    margin-top: 2px;
+}
+/* primary card */
+.container .content-pr {
+    background-color: #1d1b36;
+    padding: 50px 30px 0px;
+    grid-area: section-1;
+}
+.container .content-pr {
+    color: #ffffff;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.container .content-pr h1 {
+    color: #3700ff;
+    font-size: 2rem;
+    letter-spacing: 2px;
+    font-family: 'Ubuntu';
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+.container .content-pr .checklist {
+    display: flex;
+    align-items: center;
+    color: #246442;
+    gap: 8px;
+    margin-top: 55px;
+}
+.container .content-pr .checklist p {
+    color: #d0cdcd;
+    font-family: 'Nunito Sans';
+    font-size: 1.2rem;
+    font-weight: 600;
+    width:100%;
+    line-height: 1.2rem;
 }
 
+/* image */
+.container .hero {
+    grid-area: hero;
+    width: 100%;
+}
+.container .hero img {
+    border-radius: 5px;
+    width: 100%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+/* side content */
+article .container .content-sc {
+    background-color: #1d1b36;
+    padding: 30px 30px 5px;
+    color: var(--primary-color);
+    border-radius: 10px;
+    -webkit-border-radius: 10xp;
+    -moz-border-radius: 10xp;
+    -ms-border-radius: 10xp;
+    -o-border-radius: 10xp;
+}
+article .container .content-sc h1 {
+    color: #3700ff;
+    font-family: 'Nunito Sans';
+    font-weight: 700;
+    font-size: 2.3rem;
+    margin-bottom: 10px;
+}
+article .container .content-sc h2 {
+    font-family: 'Ubuntu';
+    font-size: 1.8rem;
+    margin-bottom: 24px;
+    letter-spacing: -1px;
+}
+article .container .content-sc p {
+    font-family: 'Roboto Slab';
+    color: #d0cdcd;
+    font-size: 1.1rem;
+    width: 80%;
+    line-height: 1.5rem;
+    font-weight: 310;
+}
+
+/* side-content-2 */
+#content-2 {
+    grid-area: section-2;
+}
 
 /* responsive */
 /* handphone */
