--- a/css/styles.css
+++ b/css/styles.css
@@ -289,6 +289,9 @@ main .card-all p {
 #section-3 {
     margin-top: 5rem;
 } 
+#section-3 h1 {
+    width: 100%;
+}
 
 /* roadmap */
 article .container {
