--- a/css/styles.css
+++ b/css/styles.css
@@ -510,6 +510,139 @@ article .container .content-sc p {
     font-weight: 400;
 }
 
+/* pricing tag */
+.price-tag {
+    margin: 10rem 20% 2rem ;
+}
+/* header */
+.price-tag .header {
+    font-family: 'Ubuntu';    
+}
+.price-tag .header h1 {
+    font-size: 2.3rem;
+    color: #ffffff;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+.price-tag .header h2 {
+    font-size: 1.2rem;
+    color: #c509c5;
+    width: 80%;
+    font-weight: 400;
+    line-height: 1.4rem;
+    margin-bottom: 15px;
+}
+
+/* card */
+.price-tag .price-card {
+    display: flex;
+    gap: 10px;
+}
+.price-tag .price-card .card-1{
+    color: #ffffff;
+    background-color: #1d1b36;
+    padding: 1.8rem;
+    font-family: 'Ubuntu';
+    border-radius: 10px;
+    width: 55%;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+.price-tag .price-card .card-1 h2 {
+    color: #3700ff;
+    font-weight: 700;
+    font-size: 1.1rem;
+    margin-bottom: 30px;
+}
+.price-tag .price-card .card-1 .check-container .checklist {
+    display: flex;
+    margin: 30px 0 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: #246442;
+}
+.price-tag .price-card .card-1 .check-container .checklist p {
+    color: #ffffff;
+}
+
+/* card-2 */
+.price-tag .price-card .card-2{
+    color: #ffffff;
+    background-color: #1d1b36;
+    padding: 1.8rem 1.8rem 1rem;
+    font-family: 'Ubuntu';
+    border-radius: 10px;
+    width: 45%;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+.price-tag .price-card .card-2 h1 {
+    color: #3700ff;
+    font-weight: 700;
+    font-size: 1.3rem;
+    margin-top: -5px;
+}
+.price-tag .price-card .card-2 .price-container {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.price-tag .price-card .card-2 .price-container h2 {
+    font-size: 3rem;
+    font-family: 'Nunito Sans';
+    font-weight: 700;
+    color: #cf10cf;
+}
+.price-tag .price-card .card-2 .price-container h3 {
+    margin-top: 20px;
+    font-weight: 700;
+    color: #797676;
+}
+
+.price-tag .price-card .card-2 h4 {
+    font-size: .8rem;
+    font-weight: 450;
+    color:#ed82ed;
+}
+.price-tag .price-card .card-2 p {
+    color: #6d306d;
+    margin-top: 10px;
+    font-size: 1rem;
+    font-weight: 350;
+    text-align: justify;
+}
+.price-tag .price-card .card-2 .footer {
+    margin-top: 6.5rem;
+    text-align: center;
+}
+.price-tag .price-card .card-2 .footer a{
+    background-color: #663cff;
+    color: #ffffff;
+    font-weight: 700    ;
+    font-size: 1rem;
+    padding: .5rem 4rem;
+    border: 1px solid #211c60;
+    border-radius: 6px;
+    text-decoration: none;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+}
+.price-tag .price-card .card-2 .footer a:active{
+    opacity: .8;
+}
+.price-tag .price-card .card-2 .footer p {
+    color: #797676;
+    text-align: center;
+    font-weight: 300;
+}
 
 /* responsive */
 /* handphone */
