--- a/css/styles.css
+++ b/css/styles.css
@@ -796,6 +796,17 @@ article .container .content-sc p {
     .price-tag .price-card .card-2 {
         width: 100%;
     }
+    /* question */
+    .question-card {
+        margin: 10rem 10% 2rem;
+    }
+    .question-card .header p {
+        width: 100%;
+    }
+    .question-card .card-container {
+        grid-template-rows: repeat(7, 150px);
+        grid-template-columns: 1fr;
+    }
 }
 @media screen and (min-width:631px) {
     html {
