--- a/css/styles.css
+++ b/css/styles.css
@@ -758,6 +758,7 @@ footer .link a:hover:after {
 @media screen and (max-width:630px) {
     html {
         font-size: 80%;
+        scroll-behavior: smooth;
     }
     /* nav */
     header  .nav{
@@ -879,6 +880,7 @@ footer .link a:hover:after {
 @media screen and (min-width:631px) {
     html {
         font-size: 75%;
+        scroll-behavior: smooth;
     }
     /* navbar */
     header .nav {
@@ -997,6 +999,7 @@ footer .link a:hover:after {
 @media screen and (min-width:1024px) {
    html {
     font-size: 90%;
+    scroll-behavior: smooth;
    }
    header .nav {
     gap: 3rem;
@@ -1065,5 +1068,35 @@ footer .link a:hover:after {
     }
     footer h1 {
         width: 70%;
+    }
+
+    /* question */
+    .question-card .card-container {
+        display: grid;
+        gap: 10px;
+        grid-template-columns: repeat(2, minmax(300px, 1fr));
+        grid-template-rows: repeat(7, 200px)
+    }
+    .question-card .card-all {
+        background-color: #1d1b36;
+        font-family: 'Ubuntu';
+        color: #ffffff;
+        padding: 20px 20px 25px;
+        border-radius: 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+    }
+    .question-card .card-all h1 {
+        font-size: 1.2rem;
+        margin-bottom: 15px;
+        font-weight: 700;
+    }
+    .question-card .card-all p {
+        width: 80%;
+        color: #d0cdcd;
+        line-height: 1.1rem;
+        text-shadow: .5px .5px 1px #cf10cf;
     }
 }
